log

Thu 14 Mar 2024 03:22:15 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
b3f3ce8
Thu 14 Mar 2024 08:12:48 PM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
a9a7e6d
Thu 14 Mar 2024 08:20:39 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
85a2582
Thu 14 Mar 2024 08:23:02 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 10/70
f5a8224
Thu 14 Mar 2024 08:26:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2fabb12
Thu 14 Mar 2024 08:28:55 PM UTC: 
 exercises.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 20/70
3e8682e
Thu 14 Mar 2024 08:31:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
c38f2a5
Thu 14 Mar 2024 08:43:19 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d1d4588
Thu 14 Mar 2024 08:44:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fca69a0
Thu 14 Mar 2024 08:45:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
069a013
Thu 14 Mar 2024 08:48:24 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
e02263e
Thu 14 Mar 2024 09:06:31 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 09:06:55 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 09:07:38 PM UTC: 
 exercises.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:122:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  122 |   return result;
      |          ^~~~~~
exercises.c:90:6: note: declared here
   90 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,
      |      ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf932dd
